// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`V2BankDetails matches snapshot when order is null (loading) 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <RCTScrollView
      collapsable={false}
      handlerTag={-1}
      handlerType="NativeViewGestureHandler"
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      refreshControl={
        <RefreshControlMock
          colors={
            [
              "#4459ff",
            ]
          }
          onRefresh={[Function]}
          refreshing={false}
          tintColor="#131416"
        />
      }
      testID="bank-details-refresh-control-scrollview"
    >
      <RCTRefreshControl />
      <View>
        <View
          style={
            [
              {
                "flex": 1,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "padding": 15,
                  "paddingHorizontal": 16,
                },
                undefined,
                {
                  "flex": 1,
                  "paddingHorizontal": 16,
                },
              ]
            }
          >
            <View
              style={
                {
                  "gap": 8,
                  "marginBottom": 24,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#131416",
                      "fontFamily": "Geist-Bold",
                      "fontSize": 20,
                      "fontWeight": 700,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                deposit.bank_details.main_title
              </Text>
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#66676a",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                deposit.bank_details.main_content_1
              </Text>
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#66676a",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                deposit.bank_details.main_content_2
              </Text>
            </View>
            <View
              testID="loader"
            />
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View>
      <View
        style={
          [
            {
              "padding": 15,
              "paddingHorizontal": 16,
            },
            undefined,
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "gap": 16,
            }
          }
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "backgroundColor": "#b4b4b528",
                "borderRadius": 8,
                "marginVertical": 8,
                "padding": 16,
                "paddingVertical": 8,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "flex": -1,
                  }
                }
                testID="listitemcolumn"
              >
                <SvgMock
                  color="#66676a"
                  fill="currentColor"
                  height={24}
                  name="SecurityKey"
                  style={
                    {
                      "height": 24,
                      "width": 24,
                    }
                  }
                  width={24}
                />
              </View>
              <View
                accessible={false}
                style={
                  {
                    "width": 8,
                  }
                }
                testID="listitem-gap"
              />
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    [
                      {
                        "color": "#66676a",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 12,
                        "fontWeight": 400,
                        "letterSpacing": 0.25,
                        "lineHeight": 20,
                      },
                      undefined,
                    ]
                  }
                >
                  deposit.bank_details.info_banner_text
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 16,
              }
            }
          >
            <View
              accessibilityLabel="deposit.order_processing.cancel_order_button"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "flex-start",
                    "backgroundColor": "#b4b4b528",
                    "borderColor": "transparent",
                    "borderRadius": 12,
                    "borderWidth": 1,
                    "columnGap": 8,
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 80,
                    "opacity": 1,
                    "overflow": "hidden",
                    "paddingLeft": 16,
                    "paddingRight": 16,
                  },
                  {
                    "flex": 1,
                  },
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
            >
              <Text
                accessibilityRole="text"
                ellipsizeMode="clip"
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#131416",
                      "flexGrow": 0,
                      "flexShrink": 1,
                      "flexWrap": "wrap",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
              >
                deposit.order_processing.cancel_order_button
              </Text>
            </View>
            <View
              accessibilityLabel="deposit.bank_details.button"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "flex-start",
                    "backgroundColor": "#131416",
                    "borderRadius": 12,
                    "columnGap": 8,
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 80,
                    "opacity": 1,
                    "overflow": "hidden",
                    "paddingLeft": 16,
                    "paddingRight": 16,
                  },
                  {
                    "flex": 1,
                  },
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
              testID="main-action-button"
            >
              <Text
                accessibilityRole="text"
                ellipsizeMode="clip"
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#ffffff",
                      "flexGrow": 0,
                      "flexShrink": 1,
                      "flexWrap": "wrap",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
              >
                deposit.bank_details.button
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`V2BankDetails matches snapshot with both buttons disabled while cancel order loads 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <RCTScrollView
      collapsable={false}
      handlerTag={17}
      handlerType="NativeViewGestureHandler"
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      refreshControl={
        <RefreshControlMock
          colors={
            [
              "#4459ff",
            ]
          }
          onRefresh={[Function]}
          refreshing={false}
          tintColor="#131416"
        />
      }
      testID="bank-details-refresh-control-scrollview"
    >
      <RCTRefreshControl />
      <View>
        <View
          style={
            [
              {
                "flex": 1,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "padding": 15,
                  "paddingHorizontal": 16,
                },
                undefined,
                {
                  "flex": 1,
                  "paddingHorizontal": 16,
                },
              ]
            }
          >
            <View
              style={
                {
                  "gap": 8,
                  "marginBottom": 24,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#131416",
                      "fontFamily": "Geist-Bold",
                      "fontSize": 20,
                      "fontWeight": 700,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                deposit.bank_details.main_title
              </Text>
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#66676a",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                deposit.bank_details.main_content_1
              </Text>
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#66676a",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                deposit.bank_details.main_content_2
              </Text>
            </View>
            <View
              style={
                {
                  "backgroundColor": "#b4b4b528",
                  "borderRadius": 8,
                  "gap": 16,
                  "padding": 16,
                }
              }
            >
              <View
                testID="bank-detail-deposit.bank_details.transfer_amount"
              >
                <Text>
                  deposit.bank_details.transfer_amount
                </Text>
                <Text>
                  $100.00
                </Text>
              </View>
              <View
                testID="bank-detail-deposit.bank_details.account_holder_name"
              >
                <Text>
                  deposit.bank_details.account_holder_name
                </Text>
                <Text>
                  John Doe
                </Text>
              </View>
              <View
                testID="bank-detail-deposit.bank_details.routing_number"
              >
                <Text>
                  deposit.bank_details.routing_number
                </Text>
                <Text>
                  987654321
                </Text>
              </View>
              <View
                testID="bank-detail-deposit.bank_details.account_number"
              >
                <Text>
                  deposit.bank_details.account_number
                </Text>
                <Text>
                  123456789
                </Text>
              </View>
              <View
                testID="bank-detail-deposit.bank_details.account_type"
              >
                <Text>
                  deposit.bank_details.account_type
                </Text>
                <Text>
                  Checking
                </Text>
              </View>
              <TouchableOpacity
                onPress={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 8,
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    [
                      {
                        "color": "#4459ff",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 16,
                        "fontWeight": 400,
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      },
                      undefined,
                    ]
                  }
                >
                  deposit.bank_details.show_bank_info
                </Text>
                <SvgMock
                  fill="currentColor"
                  name="ArrowDown"
                  style={
                    [
                      {
                        "color": "#4459ff",
                        "height": 16,
                        "width": 16,
                      },
                      undefined,
                    ]
                  }
                />
              </TouchableOpacity>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View>
      <View
        style={
          [
            {
              "padding": 15,
              "paddingHorizontal": 16,
            },
            undefined,
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "gap": 16,
            }
          }
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "backgroundColor": "#b4b4b528",
                "borderRadius": 8,
                "marginVertical": 8,
                "padding": 16,
                "paddingVertical": 8,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "flex": -1,
                  }
                }
                testID="listitemcolumn"
              >
                <SvgMock
                  color="#66676a"
                  fill="currentColor"
                  height={24}
                  name="SecurityKey"
                  style={
                    {
                      "height": 24,
                      "width": 24,
                    }
                  }
                  width={24}
                />
              </View>
              <View
                accessible={false}
                style={
                  {
                    "width": 8,
                  }
                }
                testID="listitem-gap"
              />
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    [
                      {
                        "color": "#66676a",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 12,
                        "fontWeight": 400,
                        "letterSpacing": 0.25,
                        "lineHeight": 20,
                      },
                      undefined,
                    ]
                  }
                >
                  deposit.bank_details.info_banner_text
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 16,
              }
            }
          >
            <View
              accessibilityHint="Button is currently loading, please wait"
              accessibilityLabel="deposit.order_processing.cancel_order_button"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": true,
                  "checked": undefined,
                  "disabled": true,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "flex-start",
                    "backgroundColor": "#b4b4b552",
                    "borderColor": "transparent",
                    "borderRadius": 12,
                    "borderWidth": 1,
                    "columnGap": 8,
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 80,
                    "opacity": 0.5,
                    "overflow": "hidden",
                    "paddingLeft": 16,
                    "paddingRight": 16,
                  },
                  {
                    "flex": 1,
                  },
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "bottom": 0,
                    "display": "flex",
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
                testID="spinner-container"
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "columnGap": 8,
                        "flexDirection": "row",
                      },
                      undefined,
                    ]
                  }
                >
                  <View
                    style={
                      [
                        {
                          "transform": [
                            {
                              "rotate": "0deg",
                            },
                          ],
                        },
                      ]
                    }
                    testID="spinner-animated-view"
                  >
                    <SvgMock
                      fill="currentColor"
                      name="Loading"
                      style={
                        [
                          {
                            "color": "#131416",
                            "height": 20,
                            "width": 20,
                          },
                          undefined,
                        ]
                      }
                      testID="spinner-icon"
                    />
                  </View>
                </View>
              </View>
              <Text
                accessibilityRole="text"
                ellipsizeMode="clip"
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#131416",
                      "flexGrow": 0,
                      "flexShrink": 1,
                      "flexWrap": "wrap",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "opacity": 0,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
              >
                deposit.order_processing.cancel_order_button
              </Text>
            </View>
            <View
              accessibilityLabel="deposit.bank_details.button"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": true,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "flex-start",
                    "backgroundColor": "#131416",
                    "borderRadius": 12,
                    "columnGap": 8,
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 80,
                    "opacity": 0.5,
                    "overflow": "hidden",
                    "paddingLeft": 16,
                    "paddingRight": 16,
                  },
                  {
                    "flex": 1,
                  },
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
              testID="main-action-button"
            >
              <Text
                accessibilityRole="text"
                ellipsizeMode="clip"
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#ffffff",
                      "flexGrow": 0,
                      "flexShrink": 1,
                      "flexWrap": "wrap",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
              >
                deposit.bank_details.button
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`V2BankDetails matches snapshot with both buttons disabled while confirm payment loads 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <RCTScrollView
      collapsable={false}
      handlerTag={16}
      handlerType="NativeViewGestureHandler"
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      refreshControl={
        <RefreshControlMock
          colors={
            [
              "#4459ff",
            ]
          }
          onRefresh={[Function]}
          refreshing={false}
          tintColor="#131416"
        />
      }
      testID="bank-details-refresh-control-scrollview"
    >
      <RCTRefreshControl />
      <View>
        <View
          style={
            [
              {
                "flex": 1,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "padding": 15,
                  "paddingHorizontal": 16,
                },
                undefined,
                {
                  "flex": 1,
                  "paddingHorizontal": 16,
                },
              ]
            }
          >
            <View
              style={
                {
                  "gap": 8,
                  "marginBottom": 24,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#131416",
                      "fontFamily": "Geist-Bold",
                      "fontSize": 20,
                      "fontWeight": 700,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                deposit.bank_details.main_title
              </Text>
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#66676a",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                deposit.bank_details.main_content_1
              </Text>
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#66676a",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                deposit.bank_details.main_content_2
              </Text>
            </View>
            <View
              style={
                {
                  "backgroundColor": "#b4b4b528",
                  "borderRadius": 8,
                  "gap": 16,
                  "padding": 16,
                }
              }
            >
              <View
                testID="bank-detail-deposit.bank_details.transfer_amount"
              >
                <Text>
                  deposit.bank_details.transfer_amount
                </Text>
                <Text>
                  $100.00
                </Text>
              </View>
              <View
                testID="bank-detail-deposit.bank_details.account_holder_name"
              >
                <Text>
                  deposit.bank_details.account_holder_name
                </Text>
                <Text>
                  John Doe
                </Text>
              </View>
              <View
                testID="bank-detail-deposit.bank_details.routing_number"
              >
                <Text>
                  deposit.bank_details.routing_number
                </Text>
                <Text>
                  987654321
                </Text>
              </View>
              <View
                testID="bank-detail-deposit.bank_details.account_number"
              >
                <Text>
                  deposit.bank_details.account_number
                </Text>
                <Text>
                  123456789
                </Text>
              </View>
              <View
                testID="bank-detail-deposit.bank_details.account_type"
              >
                <Text>
                  deposit.bank_details.account_type
                </Text>
                <Text>
                  Checking
                </Text>
              </View>
              <TouchableOpacity
                onPress={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 8,
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    [
                      {
                        "color": "#4459ff",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 16,
                        "fontWeight": 400,
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      },
                      undefined,
                    ]
                  }
                >
                  deposit.bank_details.show_bank_info
                </Text>
                <SvgMock
                  fill="currentColor"
                  name="ArrowDown"
                  style={
                    [
                      {
                        "color": "#4459ff",
                        "height": 16,
                        "width": 16,
                      },
                      undefined,
                    ]
                  }
                />
              </TouchableOpacity>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View>
      <View
        style={
          [
            {
              "padding": 15,
              "paddingHorizontal": 16,
            },
            undefined,
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "gap": 16,
            }
          }
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "backgroundColor": "#b4b4b528",
                "borderRadius": 8,
                "marginVertical": 8,
                "padding": 16,
                "paddingVertical": 8,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "flex": -1,
                  }
                }
                testID="listitemcolumn"
              >
                <SvgMock
                  color="#66676a"
                  fill="currentColor"
                  height={24}
                  name="SecurityKey"
                  style={
                    {
                      "height": 24,
                      "width": 24,
                    }
                  }
                  width={24}
                />
              </View>
              <View
                accessible={false}
                style={
                  {
                    "width": 8,
                  }
                }
                testID="listitem-gap"
              />
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    [
                      {
                        "color": "#66676a",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 12,
                        "fontWeight": 400,
                        "letterSpacing": 0.25,
                        "lineHeight": 20,
                      },
                      undefined,
                    ]
                  }
                >
                  deposit.bank_details.info_banner_text
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 16,
              }
            }
          >
            <View
              accessibilityLabel="deposit.order_processing.cancel_order_button"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": true,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "flex-start",
                    "backgroundColor": "#b4b4b528",
                    "borderColor": "transparent",
                    "borderRadius": 12,
                    "borderWidth": 1,
                    "columnGap": 8,
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 80,
                    "opacity": 0.5,
                    "overflow": "hidden",
                    "paddingLeft": 16,
                    "paddingRight": 16,
                  },
                  {
                    "flex": 1,
                  },
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
            >
              <Text
                accessibilityRole="text"
                ellipsizeMode="clip"
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#131416",
                      "flexGrow": 0,
                      "flexShrink": 1,
                      "flexWrap": "wrap",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
              >
                deposit.order_processing.cancel_order_button
              </Text>
            </View>
            <View
              accessibilityHint="Button is currently loading, please wait"
              accessibilityLabel="deposit.bank_details.button"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": true,
                  "checked": undefined,
                  "disabled": true,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "flex-start",
                    "backgroundColor": "#414243",
                    "borderRadius": 12,
                    "columnGap": 8,
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 80,
                    "opacity": 0.5,
                    "overflow": "hidden",
                    "paddingLeft": 16,
                    "paddingRight": 16,
                  },
                  {
                    "flex": 1,
                  },
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
              testID="main-action-button"
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "bottom": 0,
                    "display": "flex",
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
                testID="spinner-container"
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "columnGap": 8,
                        "flexDirection": "row",
                      },
                      undefined,
                    ]
                  }
                >
                  <View
                    style={
                      [
                        {
                          "transform": [
                            {
                              "rotate": "0deg",
                            },
                          ],
                        },
                      ]
                    }
                    testID="spinner-animated-view"
                  >
                    <SvgMock
                      fill="currentColor"
                      name="Loading"
                      style={
                        [
                          {
                            "color": "#ffffff",
                            "height": 20,
                            "width": 20,
                          },
                          undefined,
                        ]
                      }
                      testID="spinner-icon"
                    />
                  </View>
                </View>
              </View>
              <Text
                accessibilityRole="text"
                ellipsizeMode="clip"
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#ffffff",
                      "flexGrow": 0,
                      "flexShrink": 1,
                      "flexWrap": "wrap",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "opacity": 0,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
              >
                deposit.bank_details.button
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`V2BankDetails matches snapshot with order data and depositOrder from refresh 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <RCTScrollView
      collapsable={false}
      handlerTag={3}
      handlerType="NativeViewGestureHandler"
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      refreshControl={
        <RefreshControlMock
          colors={
            [
              "#4459ff",
            ]
          }
          onRefresh={[Function]}
          refreshing={false}
          tintColor="#131416"
        />
      }
      testID="bank-details-refresh-control-scrollview"
    >
      <RCTRefreshControl />
      <View>
        <View
          style={
            [
              {
                "flex": 1,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "padding": 15,
                  "paddingHorizontal": 16,
                },
                undefined,
                {
                  "flex": 1,
                  "paddingHorizontal": 16,
                },
              ]
            }
          >
            <View
              style={
                {
                  "gap": 8,
                  "marginBottom": 24,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#131416",
                      "fontFamily": "Geist-Bold",
                      "fontSize": 20,
                      "fontWeight": 700,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                deposit.bank_details.main_title
              </Text>
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#66676a",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                deposit.bank_details.main_content_1
              </Text>
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#66676a",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                deposit.bank_details.main_content_2
              </Text>
            </View>
            <View
              style={
                {
                  "backgroundColor": "#b4b4b528",
                  "borderRadius": 8,
                  "gap": 16,
                  "padding": 16,
                }
              }
            >
              <View
                testID="bank-detail-deposit.bank_details.transfer_amount"
              >
                <Text>
                  deposit.bank_details.transfer_amount
                </Text>
                <Text>
                  $100.00
                </Text>
              </View>
              <View
                testID="bank-detail-deposit.bank_details.account_holder_name"
              >
                <Text>
                  deposit.bank_details.account_holder_name
                </Text>
                <Text>
                  John Doe
                </Text>
              </View>
              <View
                testID="bank-detail-deposit.bank_details.routing_number"
              >
                <Text>
                  deposit.bank_details.routing_number
                </Text>
                <Text>
                  987654321
                </Text>
              </View>
              <View
                testID="bank-detail-deposit.bank_details.account_number"
              >
                <Text>
                  deposit.bank_details.account_number
                </Text>
                <Text>
                  123456789
                </Text>
              </View>
              <View
                testID="bank-detail-deposit.bank_details.account_type"
              >
                <Text>
                  deposit.bank_details.account_type
                </Text>
                <Text>
                  Checking
                </Text>
              </View>
              <TouchableOpacity
                onPress={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 8,
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    [
                      {
                        "color": "#4459ff",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 16,
                        "fontWeight": 400,
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      },
                      undefined,
                    ]
                  }
                >
                  deposit.bank_details.show_bank_info
                </Text>
                <SvgMock
                  fill="currentColor"
                  name="ArrowDown"
                  style={
                    [
                      {
                        "color": "#4459ff",
                        "height": 16,
                        "width": 16,
                      },
                      undefined,
                    ]
                  }
                />
              </TouchableOpacity>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View>
      <View
        style={
          [
            {
              "padding": 15,
              "paddingHorizontal": 16,
            },
            undefined,
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "gap": 16,
            }
          }
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "backgroundColor": "#b4b4b528",
                "borderRadius": 8,
                "marginVertical": 8,
                "padding": 16,
                "paddingVertical": 8,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "flex": -1,
                  }
                }
                testID="listitemcolumn"
              >
                <SvgMock
                  color="#66676a"
                  fill="currentColor"
                  height={24}
                  name="SecurityKey"
                  style={
                    {
                      "height": 24,
                      "width": 24,
                    }
                  }
                  width={24}
                />
              </View>
              <View
                accessible={false}
                style={
                  {
                    "width": 8,
                  }
                }
                testID="listitem-gap"
              />
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    [
                      {
                        "color": "#66676a",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 12,
                        "fontWeight": 400,
                        "letterSpacing": 0.25,
                        "lineHeight": 20,
                      },
                      undefined,
                    ]
                  }
                >
                  deposit.bank_details.info_banner_text
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 16,
              }
            }
          >
            <View
              accessibilityLabel="deposit.order_processing.cancel_order_button"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "flex-start",
                    "backgroundColor": "#b4b4b528",
                    "borderColor": "transparent",
                    "borderRadius": 12,
                    "borderWidth": 1,
                    "columnGap": 8,
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 80,
                    "opacity": 1,
                    "overflow": "hidden",
                    "paddingLeft": 16,
                    "paddingRight": 16,
                  },
                  {
                    "flex": 1,
                  },
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
            >
              <Text
                accessibilityRole="text"
                ellipsizeMode="clip"
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#131416",
                      "flexGrow": 0,
                      "flexShrink": 1,
                      "flexWrap": "wrap",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
              >
                deposit.order_processing.cancel_order_button
              </Text>
            </View>
            <View
              accessibilityLabel="deposit.bank_details.button"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "flex-start",
                    "backgroundColor": "#131416",
                    "borderRadius": 12,
                    "columnGap": 8,
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 80,
                    "opacity": 1,
                    "overflow": "hidden",
                    "paddingLeft": 16,
                    "paddingRight": 16,
                  },
                  {
                    "flex": 1,
                  },
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
              testID="main-action-button"
            >
              <Text
                accessibilityRole="text"
                ellipsizeMode="clip"
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#ffffff",
                      "flexGrow": 0,
                      "flexShrink": 1,
                      "flexWrap": "wrap",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
              >
                deposit.bank_details.button
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`V2BankDetails renders IBAN and BIC fields when present 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <RCTScrollView
      collapsable={false}
      handlerTag={13}
      handlerType="NativeViewGestureHandler"
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      refreshControl={
        <RefreshControlMock
          colors={
            [
              "#4459ff",
            ]
          }
          onRefresh={[Function]}
          refreshing={false}
          tintColor="#131416"
        />
      }
      testID="bank-details-refresh-control-scrollview"
    >
      <RCTRefreshControl />
      <View>
        <View
          style={
            [
              {
                "flex": 1,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "padding": 15,
                  "paddingHorizontal": 16,
                },
                undefined,
                {
                  "flex": 1,
                  "paddingHorizontal": 16,
                },
              ]
            }
          >
            <View
              style={
                {
                  "gap": 8,
                  "marginBottom": 24,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#131416",
                      "fontFamily": "Geist-Bold",
                      "fontSize": 20,
                      "fontWeight": 700,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                deposit.bank_details.main_title
              </Text>
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#66676a",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                deposit.bank_details.main_content_1
              </Text>
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#66676a",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                deposit.bank_details.main_content_2
              </Text>
            </View>
            <View
              style={
                {
                  "backgroundColor": "#b4b4b528",
                  "borderRadius": 8,
                  "gap": 16,
                  "padding": 16,
                }
              }
            >
              <View
                testID="bank-detail-deposit.bank_details.transfer_amount"
              >
                <Text>
                  deposit.bank_details.transfer_amount
                </Text>
                <Text>
                  €100.00
                </Text>
              </View>
              <View
                testID="bank-detail-deposit.bank_details.iban"
              >
                <Text>
                  deposit.bank_details.iban
                </Text>
                <Text>
                  DE89370400440532013000
                </Text>
              </View>
              <View
                testID="bank-detail-deposit.bank_details.bic"
              >
                <Text>
                  deposit.bank_details.bic
                </Text>
                <Text>
                  COBADEFFXXX
                </Text>
              </View>
              <TouchableOpacity
                onPress={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 8,
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    [
                      {
                        "color": "#4459ff",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 16,
                        "fontWeight": 400,
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      },
                      undefined,
                    ]
                  }
                >
                  deposit.bank_details.show_bank_info
                </Text>
                <SvgMock
                  fill="currentColor"
                  name="ArrowDown"
                  style={
                    [
                      {
                        "color": "#4459ff",
                        "height": 16,
                        "width": 16,
                      },
                      undefined,
                    ]
                  }
                />
              </TouchableOpacity>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View>
      <View
        style={
          [
            {
              "padding": 15,
              "paddingHorizontal": 16,
            },
            undefined,
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "gap": 16,
            }
          }
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "backgroundColor": "#b4b4b528",
                "borderRadius": 8,
                "marginVertical": 8,
                "padding": 16,
                "paddingVertical": 8,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "flex": -1,
                  }
                }
                testID="listitemcolumn"
              >
                <SvgMock
                  color="#66676a"
                  fill="currentColor"
                  height={24}
                  name="SecurityKey"
                  style={
                    {
                      "height": 24,
                      "width": 24,
                    }
                  }
                  width={24}
                />
              </View>
              <View
                accessible={false}
                style={
                  {
                    "width": 8,
                  }
                }
                testID="listitem-gap"
              />
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    [
                      {
                        "color": "#66676a",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 12,
                        "fontWeight": 400,
                        "letterSpacing": 0.25,
                        "lineHeight": 20,
                      },
                      undefined,
                    ]
                  }
                >
                  deposit.bank_details.info_banner_text
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 16,
              }
            }
          >
            <View
              accessibilityLabel="deposit.order_processing.cancel_order_button"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "flex-start",
                    "backgroundColor": "#b4b4b528",
                    "borderColor": "transparent",
                    "borderRadius": 12,
                    "borderWidth": 1,
                    "columnGap": 8,
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 80,
                    "opacity": 1,
                    "overflow": "hidden",
                    "paddingLeft": 16,
                    "paddingRight": 16,
                  },
                  {
                    "flex": 1,
                  },
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
            >
              <Text
                accessibilityRole="text"
                ellipsizeMode="clip"
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#131416",
                      "flexGrow": 0,
                      "flexShrink": 1,
                      "flexWrap": "wrap",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
              >
                deposit.order_processing.cancel_order_button
              </Text>
            </View>
            <View
              accessibilityLabel="deposit.bank_details.button"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "flex-start",
                    "backgroundColor": "#131416",
                    "borderRadius": 12,
                    "columnGap": 8,
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 80,
                    "opacity": 1,
                    "overflow": "hidden",
                    "paddingLeft": 16,
                    "paddingRight": 16,
                  },
                  {
                    "flex": 1,
                  },
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
              testID="main-action-button"
            >
              <Text
                accessibilityRole="text"
                ellipsizeMode="clip"
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#ffffff",
                      "flexGrow": 0,
                      "flexShrink": 1,
                      "flexWrap": "wrap",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
              >
                deposit.bank_details.button
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`V2BankDetails when shouldUpdate is false matches snapshot showing bank details from controller order 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <RCTScrollView
      collapsable={false}
      handlerTag={-1}
      handlerType="NativeViewGestureHandler"
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      refreshControl={
        <RefreshControlMock
          colors={
            [
              "#4459ff",
            ]
          }
          onRefresh={[Function]}
          refreshing={false}
          tintColor="#131416"
        />
      }
      testID="bank-details-refresh-control-scrollview"
    >
      <RCTRefreshControl />
      <View>
        <View
          style={
            [
              {
                "flex": 1,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "padding": 15,
                  "paddingHorizontal": 16,
                },
                undefined,
                {
                  "flex": 1,
                  "paddingHorizontal": 16,
                },
              ]
            }
          >
            <View
              style={
                {
                  "gap": 8,
                  "marginBottom": 24,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#131416",
                      "fontFamily": "Geist-Bold",
                      "fontSize": 20,
                      "fontWeight": 700,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                deposit.bank_details.main_title
              </Text>
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#66676a",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                deposit.bank_details.main_content_1
              </Text>
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#66676a",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                deposit.bank_details.main_content_2
              </Text>
            </View>
            <View
              style={
                {
                  "backgroundColor": "#b4b4b528",
                  "borderRadius": 8,
                  "gap": 16,
                  "padding": 16,
                }
              }
            >
              <View
                testID="bank-detail-deposit.bank_details.transfer_amount"
              >
                <Text>
                  deposit.bank_details.transfer_amount
                </Text>
                <Text>
                  $100.00
                </Text>
              </View>
              <View
                testID="bank-detail-deposit.bank_details.account_holder_name"
              >
                <Text>
                  deposit.bank_details.account_holder_name
                </Text>
                <Text>
                  John Doe
                </Text>
              </View>
              <View
                testID="bank-detail-deposit.bank_details.routing_number"
              >
                <Text>
                  deposit.bank_details.routing_number
                </Text>
                <Text>
                  987654321
                </Text>
              </View>
              <View
                testID="bank-detail-deposit.bank_details.account_number"
              >
                <Text>
                  deposit.bank_details.account_number
                </Text>
                <Text>
                  123456789
                </Text>
              </View>
              <View
                testID="bank-detail-deposit.bank_details.account_type"
              >
                <Text>
                  deposit.bank_details.account_type
                </Text>
                <Text>
                  Checking
                </Text>
              </View>
              <TouchableOpacity
                onPress={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 8,
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    [
                      {
                        "color": "#4459ff",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 16,
                        "fontWeight": 400,
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      },
                      undefined,
                    ]
                  }
                >
                  deposit.bank_details.show_bank_info
                </Text>
                <SvgMock
                  fill="currentColor"
                  name="ArrowDown"
                  style={
                    [
                      {
                        "color": "#4459ff",
                        "height": 16,
                        "width": 16,
                      },
                      undefined,
                    ]
                  }
                />
              </TouchableOpacity>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View>
      <View
        style={
          [
            {
              "padding": 15,
              "paddingHorizontal": 16,
            },
            undefined,
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "gap": 16,
            }
          }
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "backgroundColor": "#b4b4b528",
                "borderRadius": 8,
                "marginVertical": 8,
                "padding": 16,
                "paddingVertical": 8,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "flex": -1,
                  }
                }
                testID="listitemcolumn"
              >
                <SvgMock
                  color="#66676a"
                  fill="currentColor"
                  height={24}
                  name="SecurityKey"
                  style={
                    {
                      "height": 24,
                      "width": 24,
                    }
                  }
                  width={24}
                />
              </View>
              <View
                accessible={false}
                style={
                  {
                    "width": 8,
                  }
                }
                testID="listitem-gap"
              />
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    [
                      {
                        "color": "#66676a",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 12,
                        "fontWeight": 400,
                        "letterSpacing": 0.25,
                        "lineHeight": 20,
                      },
                      undefined,
                    ]
                  }
                >
                  deposit.bank_details.info_banner_text
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 16,
              }
            }
          >
            <View
              accessibilityLabel="deposit.order_processing.cancel_order_button"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "flex-start",
                    "backgroundColor": "#b4b4b528",
                    "borderColor": "transparent",
                    "borderRadius": 12,
                    "borderWidth": 1,
                    "columnGap": 8,
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 80,
                    "opacity": 1,
                    "overflow": "hidden",
                    "paddingLeft": 16,
                    "paddingRight": 16,
                  },
                  {
                    "flex": 1,
                  },
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
            >
              <Text
                accessibilityRole="text"
                ellipsizeMode="clip"
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#131416",
                      "flexGrow": 0,
                      "flexShrink": 1,
                      "flexWrap": "wrap",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
              >
                deposit.order_processing.cancel_order_button
              </Text>
            </View>
            <View
              accessibilityLabel="deposit.bank_details.button"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "flex-start",
                    "backgroundColor": "#131416",
                    "borderRadius": 12,
                    "columnGap": 8,
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 80,
                    "opacity": 1,
                    "overflow": "hidden",
                    "paddingLeft": 16,
                    "paddingRight": 16,
                  },
                  {
                    "flex": 1,
                  },
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
              testID="main-action-button"
            >
              <Text
                accessibilityRole="text"
                ellipsizeMode="clip"
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#ffffff",
                      "flexGrow": 0,
                      "flexShrink": 1,
                      "flexWrap": "wrap",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
              >
                deposit.bank_details.button
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;
